fix: facet text alignment

--- a/app/assets/stylesheets/nla/_facets.scss
+++ b/app/assets/stylesheets/nla/_facets.scss
@@ -33,6 +33,11 @@
     }
   }
   
+  .facet-label {
+    padding-left: 0;
+    text-indent: 0;
+  }
+  
   .facet-select {
     text-decoration: none;
     
